poppr 1.1.2.99
===========

poppr 1.1.2
===========
BUG FIX
* Fixed memory allocation bug (Further addresses issue #2).
* Memory allocated in C function bruvo_dist is now properly freed.

poppr 1.1.1
===========
BUG FIX
* Fixed bug where the loss and add options for Bruvo's distance were switched. 
* Fixed illegal memory access error by UBSAN. Made memory management of internal C functions more sane. (Addresses issue #2).
* Fixed directional quotes and em-dashes produced by Mavericks (Addresses issue #3).

poppr 1.1.0
===========
NEW FEATURES
* Polyploids with ambiguous genotypes are now supported in poppr. See documentation for `recode_polyploids` for details. 
* Calculations of Bruvo's distance now features correction for partial missing data utilizing genome addition and genome loss models as presented in Bruvo et al. 2004. 
* `diss.dist` now has options to return raw distances and a matrix instead of a dist object.
* `read.genalex` now has the option to import as a genclone object. This is the default action.
* `poppr.all` will be able to analyze lists of genind or genclone objects.
* `ia` now has the argument valuereturn which will return the sampled data.
* `[bruvo,poppr].msn` functions now give the user the choice to show the graph.
* `bruvo.boot` has a cleaner plot style. 

NEW DATA CLASSES
* The `genclone` object is a new extension of the `genind` object from adegenet. This object contains slots containing population hierarchies and multilocus genotype definitions and will work with all analyses in adegenet and poppr. 

NEW FUNCTIONS
* [get,set,name,split,add]hierarchy - functions that will manipulate the hierarchy slot in a `genclone` object utilizing hierarchical formulae as arguments for simplification.
* `setpop` will set the population of a `genclone` object utilizing model formulae regarding the hierarchy slot.
* `as.genclone` will automatically convert genind objects to genclone objects.
* `is.genclone` checks the validity of genclone objects.