@@ -2,8 +2,8 @@ Package: poppr
 Type: Package
 Title: an R package for genetic analysis of populations with mixed
     reproduction
-Version: 1.1.2.99-41
-Date: 2014-07-31
+Version: 1.1.2.99-60
+Date: 2014-08-26
 Author: Zhian N. Kamvar <kamvarz@science.oregonstate.edu>, Javier F. Tabima
     <tabimaj@onid.orst.edu>, Niklaus J. Grunwald
     <grunwaln@science.oregonstate.edu>
