@@ -1,6 +1,6 @@
 % Generated by roxygen2 (4.0.1): do not edit by hand
-\name{bitwise.pgen}
-\alias{bitwise.pgen}
+\name{pgen}
+\alias{pgen}
 \title{Calculates and returns a matrix of Pgen values for the given genlight object.
 Each column represents a genotype in the genlight objects, and each row
 represents a specific, sequential set of 8 base pairs. The values in each cell
@@ -9,7 +9,7 @@ indicate the probability of observing these alleles in a randomly mating
 population using estimates derived from the genotypes present in the genlight
 object.}
 \usage{
-bitwise.pgen(x, log = TRUE, by.pop = TRUE, window.size = 1)
+pgen(x, log = TRUE, by.pop = TRUE, window.size = 1)
 }
 \arguments{
 \item{x}{a genlight object.}
